--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="header">
       <nav class="header__menu">
-        <ul class="header__links-list"> 
+        <ul class="header__links-list">
           <li class="header__links-list-item_no-bullit">
             <a class="header__link_active" href="#0">главная</a>
           </li>
@@ -22,27 +22,33 @@
           <li class="header__links-list-item">
             <a class="header__link" href="#about">об аукционе</a>
           </li>
-        </ul> 
+        </ul>
       </nav>
       <a class="header__logo">
-        <img class="header__logo-image" alt="Логотип аукциона черный" src="./images/logo-black.svg">
+        <img
+          class="header__logo-image"
+          alt="Логотип аукциона черный"
+          src="./images/logo-black.svg"
+        />
       </a>
       <address class="address header__address">
-          <a href="tel:+99995555555">+9 999 555 5555</a>
-          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <span>наб. Принсенграхт 263- 265, Амстердам</span>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <span>наб. Принсенграхт 263- 265, Амстердам</span>
       </address>
     </header>
     <main class="main">
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-            <span class="aligned-text aligned-text_left">Оно</span>
-            <span class="aligned-text aligned-text_center">Тебе</span>
-            <span class="aligned-text aligned-text_right">Надо</span>
+          <span class="aligned-text aligned-text_left">Оно</span>
+          <span class="aligned-text aligned-text_center">Тебе</span>
+          <span class="aligned-text aligned-text_right">Надо</span>
         </h1>
         <div class="cover__description">
-          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
           <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
@@ -52,9 +58,15 @@
           <li class="lots__card-list-item">
             <a href="#0" class="card-link">
               <article class="card card_type_film">
-                <div class="overlay"></div> 
-                <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
-                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
               </article>
             </a>
           </li>
@@ -62,17 +74,33 @@
             <a href="#0" class="card-link">
               <article class="card card_type_book">
                 <div class="overlay"></div>
-                <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
               </article>
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a  href="#0" class="card-link">
+            <a href="#0" class="card-link">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
-                <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
               </article>
             </a>
           </li>
@@ -82,27 +110,44 @@
       <section class="about" id="about">
         <article class="about__column">
           <div class="about__logo">
-          <img class="about__logo-image" alt="Логотип аукциона белый" src="./images/logo-white.svg">
+            <img
+              class="about__logo-image"
+              alt="Логотип аукциона белый"
+              src="./images/logo-white.svg"
+            />
           </div>
         </article>
         <article class="about__column">
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
-          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
+            </p>
           </div>
         </article>
       </section>
     </main>
     <footer class="footer">
       <address class="address footer__address">
-          <a href="tel:+99995555555">+9 999 555 5555</a>
-          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <span>наб. Принсенграхт 263- 265, Амстердам</span>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <span>наб. Принсенграхт 263- 265, Амстердам</span>
       </address>
       <nav class="footer__menu">
-        <ul class="footer__menu-list"> 
+        <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
             <a class="footer__menu-link_active" href="#0">главная</a>
           </li>
@@ -112,23 +157,35 @@
           <li class="footer__menu-list-item">
             <a class="footer__menu-link" href="#about">об аукционе</a>
           </li>
-        </ul> 
+        </ul>
       </nav>
       <div class="footer__social-list-container">
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img class="footer__social-icon" alt="Логотип youtube" src="./images/yt.svg"> 
+              <img
+                class="footer__social-icon"
+                alt="Логотип youtube"
+                src="./images/yt.svg"
+              />
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img class="footer__social-icon" alt="Логотип vk" src="./images/vk.svg"> 
+              <img
+                class="footer__social-icon"
+                alt="Логотип vk"
+                src="./images/vk.svg"
+              />
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img class="footer__social-icon" alt="Логотип pinterest" src="./images/pinterest.svg"> 
+              <img
+                class="footer__social-icon"
+                alt="Логотип pinterest"
+                src="./images/pinterest.svg"
+              />
             </a>
           </li>
         </ul>
